--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
 	background-color: white;
 }
 header {
@@ -9,7 +9,7 @@ header {
 	margin: auto;
 }
 
-.content{
+.content, .mesta-div{
 	width: 960px;
 	margin: auto;
 }
@@ -79,4 +79,36 @@ text-align: center;
 	text-align: left;
 	display: block;
 	padding: 0;
+}
+
+
+.mesta-menu {
+	text-align:center;
+	padding:0;
+}
+
+.mesta-menu li{
+	width:320px;
+	display:inline-block;
+/* 	border:1px solid black; */
+	vertical-align:text-top;
+	text-align:center;
+-webkit-box-shadow: 5px 11px 20px 0px rgba(50, 50, 50, 0.63);
+-moz-box-shadow:    5px 11px 20px 0px rgba(50, 50, 50, 0.63);
+box-shadow:         5px 11px 20px 0px rgba(50, 50, 50, 0.63);
+border-radius:25px;
+}
+
+.mesta-menu .sub-menu{
+/* 	background-color:red; */
+	width:100%;
+	padding:0;
+	margin:0;
+}
+
+.mesta-menu .sub-menu li, .mesta-menu .sub-menu ul{
+	border-radius:0;
+	-webkit-box-shadow:0;
+-moz-box-shadow:0;
+box-shadow:0;
 }
