--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*   
+/*
 Theme Name: your-clean-template
 Theme URI: https://github.com/saxap/clean-wp-template
 Version: 1.0
@@ -7,3 +7,5 @@ Description: Чистый шаблон для разработки. Можете
 Author: saxa:p
 Author URI: http://dontforget.pro
 */
+/* Основной цвет блока и граница */
+
