--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,34 @@
 body {
-	min-width:350px;
-}
-.block2, .mesta-menu li .sub-menu, article, .sidebar, section{
-		background-color: #F5F5F5;
-		border: 1px solid grey;
-box-shadow:         5px 11px 20px 0px rgba(50, 50, 50, 0.63);
--webkit-box-shadow: 5px 11px 20px 0px rgba(50, 50, 50, 0.63);
--moz-box-shadow:    5px 11px 20px 0px rgba(50, 50, 50, 0.63);
-border-radius:25px;
-padding:25px;
-margin-bottom:30px;
+	min-width:350px; /*минимальная ширина сайта*/
+	background-color: white; /*белый фон*/
 }
 
-body {
-	background-color: white;
+footer{
+	max-width:960px;
 }
+
+.block2, .mesta-menu li .sub-menu, article, .sidebar, section, .block-2lv, .div-next-prev a{ /*вид основных блоков сайта*/
+		background-color: #F5F5F5; /*серый фон*/
+		border: 1px solid grey; /*рамка*/
+box-shadow:         5px 11px 20px 0px rgba(50, 50, 50, 0.63); /*тень*/
+-webkit-box-shadow: 5px 11px 20px 0px rgba(50, 50, 50, 0.63);
+-moz-box-shadow:    5px 11px 20px 0px rgba(50, 50, 50, 0.63);
+border-radius:25px; /*закругленные углы*/
+padding:25px;/*внутренний отступ*/
+margin-bottom:30px;/*внешний отступ*/
+}
+
+a {
+	color:blue;
+	text-decoration:none;
+	/*text-shadow: 5px 5px 7px rgba(85, 119, 115, 1);*/
+}
+
+a:hover {
+	text-decoration:underline;
+	text-shadow: 5px 5px 7px rgba(255, 155, 0, 1);
+}
+
 header {
 	max-width: 960px;
 	display: block;
@@ -29,8 +43,7 @@ header {
 	padding:15px;
 }
 
-.widget_search{
-
+.widget_search{ /*строка поиска*/
 	display:block;
 	text-align:right;
 }
@@ -118,6 +131,7 @@ text-align: center;
 
 .mesta-menu li {
 /* 	background-color:rebeccapurple; */
+	width:322px;
 	display:inline-block;
 	margin:10px 5px 0;
 	padding:0;
@@ -202,8 +216,16 @@ section{
 	margin:0;
 	padding:0;
 	list-style-type: none;
-
 }
+
+.post-meta li{
+	margin-bottom:10px;
+}
+
+.post-meta li span {
+	font-weight: bold;
+}
+
 
 /*что б после флоат не пропадала высота*/
 .clearfix:before,
@@ -225,6 +247,54 @@ max-width:470px;
 padding-top:40px;
 }
 
-.category-meta span {
-	font-weight: bold;
+/*Одна запись нижние углы ровные*/
+#single{
+	margin-bottom:0;
+	border-radius:25px 25px 0 0;
 }
+
+
+/* Одна запись кнопки вперед назад */
+.div-next-prev{
+	margin-top:0;
+}
+
+.div-next-prev a{
+	/*width:40%;*/
+}
+
+.div-next-prev a:hover{
+	color:black;
+
+
+}
+
+.div-next-prev a[rel="prev"]:hover {
+		background: rgb(226, 226, 226);
+background: -moz-linear-gradient(0deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: -webkit-linear-gradient(0deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: -o-linear-gradient(0deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: -ms-linear-gradient(0deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: linear-gradient(90deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+}
+
+.div-next-prev a[rel="prev"] {
+	float:left;
+	border-radius:0 0 50px 50px;
+}
+
+.div-next-prev a[rel="next"]:hover {
+background: rgb(226, 226, 226);
+background: -moz-linear-gradient(180deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: -webkit-linear-gradient(180deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: -o-linear-gradient(180deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: -ms-linear-gradient(180deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+background: linear-gradient(270deg, rgb(226, 226, 226) 49%, rgb(255, 255, 255) 100%);
+}
+
+.div-next-prev a[rel="next"]:last-child {
+	float:right;
+	border-radius:0 0 50px 50px;
+}
+
+/* конец кнопок вперед назад */
