--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,12 @@ padding:25px;/*внутренний отступ*/
 margin-bottom:30px;/*внешний отступ*/
 }
 
-.menu-top li a:hover, .button:hover, .block2:hover, article:hover{
+
+/*Стиль золотых кнопок при наведении в навигации и золотой заголовок сайта*/
+.in-home-page, .navigation a:hover, .navigation li a:hover, .block_click:hover{
 	background-color:white;
 	border-color:gold;
+	cursor: pointer;
 }
 
 a {
@@ -29,7 +32,7 @@ a {
 	/*text-shadow: 5px 5px 7px rgba(85, 119, 115, 1);*/
 }
 
-a:hover{
+.hover_a, a:hover{
 	text-decoration:underline;
 	text-shadow: 5px 5px 7px rgba(255, 155, 0, 1);
 }
@@ -388,3 +391,64 @@ border-radius:25px;
 	padding:10px;
 	border:2px solid grey;
 }
+
+
+/*Ширина визуального редактора в комментариях*/
+.comment-form label{
+	width: 100%;
+}
+
+/*шаблон для выравнивания текста по центру*/
+.text-center{
+	text-align: center;
+}
+
+
+/* цитирование цитата */
+blockquote {
+	font-style:italic;
+	border-left:1px solid silver;
+}
+
+/*дизайн блока при нажати на который переходим по ссылке*/
+.block_click {
+	/**/
+}
+
+/* ОБЪЯВЛЕНИЯ */
+.section-ads{
+	text-align:center;
+}
+
+.category-ads article{
+	display:inline-block;
+	width:240px;
+	margin:10px;
+	text-align:center;
+}
+
+.category-ads article .category-img{
+	float:none;
+	display:inline-block;
+	margin:0px;
+}
+
+/* заголовок */
+.category-ads article .category-title{
+	margin:5px;
+	padding:0;
+	height:35px;
+	overflow:hidden;
+}
+
+.category-ads article ul{
+	padding:0 15px;
+	text-align:center;
+}
+
+.category-ads article ul li{
+	padding:0;
+	margin:5px;
+}
+
+/*ОБЪЯВЛЕНИЯ КОНЕЦ*/
